# smol-course-project

./: .env.example  README.md  create_dataset_contacts.ipynb  main.py  pyproject.toml
